tests/compile/shader_modules/return_types.gcc.stderr
In file included from include/meta/function_construction.hpp:11,
                 from include/rcgp-meta.hpp:13,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/return_types.cpp:1:
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(Smooth<T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eFragment; T = vector<float, 3>; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:101 = smooth_return_in_fragment()::<lambda(vec3)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:102 = smooth_return_in_fragment()::<lambda(vec3)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/return_types.cpp:85:2:   required from here
   85 |         };
      |         ^
include/meta/return_handler.hpp:53:25: error: static assertion failed
   53 |         static_assert(S == ShaderStage::eVertex);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:53:25: note: '(rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eVertex)' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(Flat<T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eFragment; T = scalar<unsigned int>; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:101 = flat_return_in_fragment()::<lambda(vec3)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:102 = flat_return_in_fragment()::<lambda(vec3)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/return_types.cpp:93:2:   required from here
   93 |         };
      |         ^
include/meta/return_handler.hpp:60:25: error: static assertion failed
   60 |         static_assert(S == ShaderStage::eVertex);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:60:25: note: '(rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eVertex)' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(NoPerspective<T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eCompute; T = vector<float, 3>; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = noperspective_return_in_compute()::<lambda(WorkGroup<1>)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = noperspective_return_in_compute()::<lambda(WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/return_types.cpp:101:2:   required from here
  101 |         };
      |         ^
include/meta/return_handler.hpp:67:25: error: static assertion failed
   67 |         static_assert(S == ShaderStage::eVertex);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:67:25: note: '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eVertex)' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(T&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eCompute; T = vector<float, 4>; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = builtin_return_in_compute()::<lambda(WorkGroup<1>)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = builtin_return_in_compute()::<lambda(WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/return_types.cpp:109:2:   required from here
  109 |         };
      |         ^
include/meta/return_handler.hpp:90:31: error: static assertion failed
   90 |                 static_assert(false);
      |                               ^~~~~
include/meta/return_handler.hpp:90:31: note: 'false' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(T&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eMesh; T = vector<float, 4>; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eMesh; auto:101 = builtin_return_in_mesh()::<lambda(WorkGroup<1>)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eMesh; auto:102 = builtin_return_in_mesh()::<lambda(WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/return_types.cpp:117:2:   required from here
  117 |         };
      |         ^
include/meta/return_handler.hpp:90:31: error: static assertion failed
   90 |                 static_assert(false);
      |                               ^~~~~
include/meta/return_handler.hpp:90:31: note: 'false' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(T&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eVertex; T = MyOutput; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:101 = userdefined_return_in_vertex()::<lambda(ClipPosition)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:102 = userdefined_return_in_vertex()::<lambda(ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/return_types.cpp:126:2:   required from here
  126 |         };
      |         ^
include/meta/return_handler.hpp:99:25: error: static assertion failed
   99 |         static_assert(S == ShaderStage::eSubroutine);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:99:25: note: '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eSubroutine)' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(T&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eFragment; T = MyOutput; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:101 = userdefined_return_in_fragment()::<lambda(vec3)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:102 = userdefined_return_in_fragment()::<lambda(vec3)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/return_types.cpp:134:2:   required from here
  134 |         };
      |         ^
include/meta/return_handler.hpp:99:25: error: static assertion failed
   99 |         static_assert(S == ShaderStage::eSubroutine);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:99:25: note: '(rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eSubroutine)' evaluates to false
